--- a/gallery/index.html
+++ b/gallery/index.html
@@ -16,12 +16,12 @@
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=8apnlcrk">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=8apnlcrk">
-  <link rel="stylesheet" href="../static/styles/style.css?v=8apnlcrk">
-  <script src="../static/js/jquery-3.7.0.min.js?v=8apnlcrk"></script>
-  <script src="../static/js/popper.min.js?v=8apnlcrk"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=8apnlcrk"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=li91r7hs">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=li91r7hs">
+  <link rel="stylesheet" href="../static/styles/style.css?v=li91r7hs">
+  <script src="../static/js/jquery-3.7.0.min.js?v=li91r7hs"></script>
+  <script src="../static/js/popper.min.js?v=li91r7hs"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=li91r7hs"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -46,7 +46,7 @@
     <nav class="navbar navbar-dark navbar-expand-lg header-navbar">
       <div class="container">
         <a class="navbar-brand" href="../" title="Crazy About Colours Painters &amp; Decorators">
-          <img src="../static/images/logo.png?v=8apnlcrk" alt="Crazy About Colours Painters &amp; Decorators">
+          <img src="../static/images/logo.png?v=li91r7hs" alt="Crazy About Colours Painters &amp; Decorators">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -93,7 +93,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/1.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/1.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -102,7 +102,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/2.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/2.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -111,7 +111,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/3.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/3.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -120,7 +120,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/4.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/4.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -129,7 +129,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/5.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/5.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -138,7 +138,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/6.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/6.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -147,7 +147,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/7.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/7.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -156,7 +156,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/8.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/8.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -165,7 +165,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/9.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/9.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -174,7 +174,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/10.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/10.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -183,7 +183,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/11.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/11.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -192,7 +192,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/12.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/12.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -201,7 +201,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/13.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/13.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -210,7 +210,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/14.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/14.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -219,7 +219,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/15.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/15.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -228,7 +228,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/16.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/16.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -237,7 +237,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/17.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/17.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -246,7 +246,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/18.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/18.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -255,7 +255,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/19.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/19.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -264,7 +264,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/20.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/20.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -273,7 +273,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/21.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/21.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -282,7 +282,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/22.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/22.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -291,7 +291,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/23.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/23.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -300,7 +300,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/24.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/24.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -309,7 +309,7 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="../static/images/gallery/25.jpg?v=8apnlcrk" alt>
+              <img src="../static/images/gallery/25.jpg?v=li91r7hs" alt>
             </div>
             <div class="list-item-tag">1 May</div>
           </div>
@@ -390,7 +390,7 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=8apnlcrk"></script>
+  <script src="../static/js/main.js?v=li91r7hs"></script>
 </body>
 
 </html>
