--- a/special/index.html
+++ b/special/index.html
@@ -16,12 +16,12 @@
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=8apnlcrk">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=8apnlcrk">
-  <link rel="stylesheet" href="../static/styles/style.css?v=8apnlcrk">
-  <script src="../static/js/jquery-3.7.0.min.js?v=8apnlcrk"></script>
-  <script src="../static/js/popper.min.js?v=8apnlcrk"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=8apnlcrk"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=li91r7hs">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=li91r7hs">
+  <link rel="stylesheet" href="../static/styles/style.css?v=li91r7hs">
+  <script src="../static/js/jquery-3.7.0.min.js?v=li91r7hs"></script>
+  <script src="../static/js/popper.min.js?v=li91r7hs"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=li91r7hs"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -100,13 +100,13 @@
       <div id="carouselHome2" class="carousel carousel-common slide" data-bs-interval="5000" data-bs-ride="carousel" data-bs-touch="true">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../static/images/about/bg.jpg?v=8apnlcrk" alt>
+            <img src="../static/images/about/bg.jpg?v=li91r7hs" alt>
           </div>
           <div class="carousel-item">
-            <img src="../static/images/about/bg.jpg?v=8apnlcrk" alt>
+            <img src="../static/images/about/bg.jpg?v=li91r7hs" alt>
           </div>
           <div class="carousel-item">
-            <img src="../static/images/about/bg.jpg?v=8apnlcrk" alt>
+            <img src="../static/images/about/bg.jpg?v=li91r7hs" alt>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselHome2" data-bs-slide="prev">
@@ -300,7 +300,7 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=8apnlcrk"></script>
+  <script src="../static/js/main.js?v=li91r7hs"></script>
 </body>
 
 </html>
